--- a/src/Mapbender/ManagerBundle/Resources/views/Element/activityindicator.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/activityindicator.html.twig
@@ -1,4 +1,4 @@
-<div class="elementFormActivity elementForm">
+<div class="defaultForm elementFormActivity elementForm">
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.tooltip) }}{{ form_widget(form.configuration.tooltip) }}
