--- a/src/Mapbender/ManagerBundle/Resources/views/Element/security.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/security.html.twig
@@ -1,1 +1,4 @@
-XXX
+<a id="addPermission" href="{{path('fom_user_acl_overview')}}" class="iconAdd iconBig right" title="{{'Add users and groups'|trans}}"></a>
+
+<div class="clearContainer"></div>
+{{ form_widget(form.acl) }}
