ajaxForm check required before submit added

--- a/src/Mapbender/WmcBundle/Resources/views/Wmc/wmcloader-form.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Wmc/wmcloader-form.html.twig
@@ -4,5 +4,6 @@
         <div class="clearContainer"></div>
         {{ form_row(form._token) }}
         <div class="clearContainer"></div>
+        <input type="submit" style="display:none;"/>
     </div>
 </form>
