printclient: fixed required fields, layer selection

--- a/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
@@ -37,6 +37,7 @@
             <div class="clearContainer"></div>
             <br>
             <div id="layers"></div>
+            <input type="submit" style="display: none"/>
         </form>
     </div>
 </div>
