--- a/src/Mapbender/CoreBundle/Resources/views/Element/poi.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/poi.html.twig
@@ -1,9 +1,12 @@
-<div class="mb-element mb-element-poi" id="{{ id }}" title="{{ 'Send POI'|trans }}">
+<div class="mb-element mb-element-poi" id="{{ id }}" title="{{ 'Share POI'|trans }}">
+    <div class="input">
     <form id="poiForm">
-        <label for="subject">{{ 'Betreff'|trans }}</label><br/>
-        <input id="subject" value="{{ configuration.mail_subject }}" />
-
-        <label for="mailBody">{{ 'E-Mail Text'|trans }}</label><br />
-        <textarea id="mailBody">{{ configuration.mail_body }}</textarea>
+        <label for="body">{{ 'Text'|trans }}</label><br />
+        <textarea id="body">{{ configuration.body }}</textarea>
     </form>
+    </div>
+    <div class="output">
+    <p>{{ 'You can use the following snippet in an email to send the POI.'|trans }}</p>
+    <textarea></textarea>
+    </div>
 </div>
