--- a/src/Mapbender/CoreBundle/Resources/views/Element/sketch.trans.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/sketch.trans.twig
@@ -1,4 +1,6 @@
 {
-'mb.core.sketch.circle.form.radius': '{{ 'mb.core.sketch.circle.form.radius' | trans | raw }}',
-'mb.core.sketch.circle.form.radius.error': '{{ 'mb.core.sketch.circle.form.radius.error' | trans | raw }}',
+'mb.core.sketch.circle.radius.label': '{{ 'mb.core.sketch.circle.radius.label' | trans | raw }}',
+'mb.core.sketch.circle.radius.error': '{{ 'mb.core.sketch.circle.radius.error' | trans | raw }}',
+'mb.core.sketch.circle.form.button.yes': '{{ 'mb.core.sketch.circle.form.button.yes' | trans | raw }}',
+'mb.core.sketch.circle.form.button.cancel': '{{ 'mb.core.sketch.circle.form.button.cancel' | trans | raw }}',
 }
