--- a/src/Mapbender/CoreBundle/Resources/views/Element/basesourceswitcher.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/basesourceswitcher.html.twig
@@ -1,12 +1,9 @@
-<div id="{{ id }}" class="mb-element mb-element-basesourceswitcher"  title="{{ configuration.tooltip|default(title)|trans }}">
-{#% if configuration.mapsets is defined %}
-    {% for mapset in configuration.mapsets %}
-    {% if mapset.show %}
-    <a class="mapsetswitch{% if loop.first %} active{% endif %}" data-mapset="{% for source in mapset.sources %}{% if not loop.first %},{% endif %}{% spaceless %}{{- source -}}{% endspaceless %}{% endfor %}" href="#">{{ mapset.title | trans }}</a>
+<ul id="{{ id }}" class="mb-element mb-element-basesourceswitcher"  title="{{ configuration.tooltip|default(title)|trans }}">
+{% if configuration.sourcesets is defined %}
+  {% for sourceset in configuration.sourcesets %}
+    {% if sourceset.show %}
+    <li class="basesourcesetswitch" data-state="{% if loop.first %}active{% endif %}" data-sourceset="{% for source in sourceset.sources %}{% if not loop.first %},{% endif %}{% spaceless %}{{- source -}}{% endspaceless %}{% endfor %}" >{{ sourceset.title | trans }}</li>
     {% endif %}
-    {% endfor %}
+  {% endfor %}
 {% endif %}
-{% if configuration.fullscreen %}
-    <a id="fullscreenswitch" href="#"><span>{{ 'Vollbild'|trans }}</span></a>
-{% endif %#}
-</div>
+</ul>
