--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/basesourceswitcher.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/basesourceswitcher.html.twig
@@ -1,7 +1,7 @@
 <div class="elementFormWmsLoader elementForm">
-    <div class="left">
-        {{ form_widget(form.configuration.fullscreen) }}<label for="{{form.configuration.fullscreen.vars.id}}" class="labelCheck">{{"Fullscreen Button"|trans}}</label>
-    </div>
+    <!--div class="left">
+        {#{ form_widget(form.configuration.fullscreen) }#}<label for="{#{form.configuration.fullscreen.vars.id}#}" class="labelCheck">{#{"Fullscreen Button"|trans}#}</label>
+    </div-->
     <div class="clearContainer"></div>
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
