--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-layersets.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-layersets.html.twig
@@ -11,7 +11,7 @@
           <thead>
             <tr>
               <th>{{ 'Id' | trans }}</th>
-              <th>{{ 'Title' | trans }}</th>
+              <th>{{ 'mb.manager.admin.layerset.title' | trans }}</th>
               <th>{{ 'Type' | trans }}</th>
               <th class="iconColumn">
                 <a class="iconAdd iconSmall addInstance" title="{{"Add Instance"|trans}}" href="{{ path("mapbender_manager_application_listinstance",{'slug': application.slug, 'layersetId': layerset.id}) }}"></a>
