--- a/src/Mapbender/ManagerBundle/Resources/views/Element/coordinatesdisplay.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/coordinatesdisplay.html.twig
@@ -1,5 +1,5 @@
 <div class="elementFormCoordinates elementForm">
-    {{ form_widget(form.configuration.label) }}<label for="{{form.configuration.label.vars.id}}" class="labelCheck">{{"Show title label"|trans}}</label>
+    {{ form_widget(form.configuration.label) }}<label for="{{form.configuration.label.vars.id}}" class="labelCheck">{{"mb.core.admin.corrdsdisplay.label" | trans | raw}}</label>
     <div class="clearContainer"></div>
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
