--- a/src/Mapbender/ManagerBundle/Resources/views/Element/gpsposition.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/gpsposition.html.twig
@@ -1,8 +1,8 @@
 <div class="elementFormGps elementForm">
     <div class="left">
-        {{ form_widget(form.configuration.label) }}<label for="{{form.configuration.label.vars.id}}" class="labelCheck">{{"Show button label"|trans}}</label>
+        {{ form_widget(form.configuration.label) }}<label for="{{form.configuration.label.vars.id}}" class="labelCheck">{{"mb.core.admin.gpsposition.show_label"|trans}}</label>
     </div>
-    {{ form_widget(form.configuration.autoStart) }}<label for="{{form.configuration.autoStart.vars.id}}" class="labelCheck">{{"Autostart"|trans}}</label>
+    {{ form_widget(form.configuration.autoStart) }}<label for="{{form.configuration.autoStart.vars.id}}" class="labelCheck">{{"mb.core.admin.element.autostart"|trans}}</label>
     <div class="clearContainer"></div>
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
