--- a/src/Mapbender/ManagerBundle/Resources/views/Element/srsselector.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/srsselector.html.twig
@@ -1,5 +1,5 @@
 <div class="defaultForm elementForm">
-    {{ form_widget(form.configuration.label) }}<label for="{{form.configuration.label.vars.id}}" class="labelCheck">{{"Show button label"|trans}}</label>
+    {{ form_widget(form.configuration.label) }}<label for="{{form.configuration.label.vars.id}}" class="labelCheck">{{"mb.core.admin.srsselector.show_label"|trans}}</label>
     <div class="clearContainer"></div>
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
