--- a/src/Mapbender/ManagerBundle/Resources/views/Element/yaml-form.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/yaml-form.html.twig
@@ -1,7 +1,8 @@
 <div class="elementFormYaml elementForm">
     <div class="messageBox hint">
-      {% trans with {'%locale%': app.request.locale} %}
-      Use the <a class="linkButton" href="http://www.wikipedia.org/search-redirect.php?search=yaml&language=%locale%">YAML</a> format to describe the element's configuration.{% endtrans %}
+      {{ "mb.manager.element.yaml.message" | trans | raw }}
+{#% trans with {'%locale%': app.request.locale} %} 
+      Use the <a class="linkButton" href="http://www.wikipedia.org/search-redirect.php?search=yaml&language=%locale%">YAML</a> format to describe the element's configuration.{% endtrans %#}
     </div>
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
