--- a/src/Mapbender/WmsBundle/Resources/views/ElementAdmin/wmsloader.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/ElementAdmin/wmsloader.html.twig
@@ -1,12 +1,12 @@
 <div class="elementFormWmsLoader elementForm">
     <div class="left">
-        {{ form_widget(form.configuration.autoOpen) }}<label for="{{form.configuration.autoOpen.vars.id}}" class="labelCheck">{{"Auto open"|trans}}</label>
+        {{ form_widget(form.configuration.autoOpen) }}<label for="{{form.configuration.autoOpen.vars.id}}" class="labelCheck">{{"mb.wms.wmsloader.admin.label.autoopen"|trans}}</label>
     </div>
     <div class="left">
-        {{ form_widget(form.configuration.splitLayers) }}<label for="{{form.configuration.splitLayers.vars.id}}" class="labelCheck">{{"Split layers"|trans}}</label>
+        {{ form_widget(form.configuration.splitLayers) }}<label for="{{form.configuration.splitLayers.vars.id}}" class="labelCheck">{{"mb.wms.wmsloader.admin.label.splitlayers"|trans}}</label>
     </div>
     <div class="left">
-        {{ form_widget(form.configuration.useDeclarative) }}<label for="{{form.configuration.useDeclarative.vars.id}}" class="labelCheck">{{"Use declarative"|trans}}</label>
+        {{ form_widget(form.configuration.useDeclarative) }}<label for="{{form.configuration.useDeclarative.vars.id}}" class="labelCheck">{{"mb.wms.wmsloader.admin.label.declarative"|trans}}</label>
     </div>
     <div class="clearContainer"></div>
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
