--- a/src/Mapbender/WmsBundle/Resources/views/Repository/layer.json.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/layer.json.twig
@@ -15,5 +15,20 @@
 "mb.wms.wmsloader.repo.layer.label.legendurl": "{{ "mb.wms.wmsloader.repo.layer.label.legendurl" | trans | raw }}",
 "mb.wms.wmsloader.repo.layer.label.stylesheeturl": "{{ "mb.wms.wmsloader.repo.layer.label.stylesheeturl" | trans | raw }}",
 "mb.wms.wmsloader.repo.layer.label.styleurl": "{{ "mb.wms.wmsloader.repo.layer.label.styleurl" | trans | raw }}",
-"mb.wms.wmsloader.repo.layer.label.scale": "{{ "mb.wms.wmsloader.repo.layer.label.scale" | trans | raw }}"
+"mb.wms.wmsloader.repo.layer.label.scale": "{{ "mb.wms.wmsloader.repo.layer.label.scale" | trans | raw }}",
+"mb.wms.wmsloader.repo.layer.label.scalehint": "{{ "mb.wms.wmsloader.repo.layer.label.scalehint" | trans | raw }}",
+"mb.wms.wmsloader.repo.layer.label.min": "{{ "mb.wms.wmsloader.repo.layer.label.min" | trans | raw }}",
+"mb.wms.wmsloader.repo.layer.label.max": "{{ "mb.wms.wmsloader.repo.layer.label.max" | trans | raw }}",
+"mb.wms.wmsloader.repo.layer.label.onlineresource": "{{ "mb.wms.wmsloader.repo.layer.label.onlineresource" | trans | raw }}",
+"mb.wms.wmsloader.repo.layer.label.attribution": "{{ "mb.wms.wmsloader.repo.layer.label.attribution" | trans | raw }}",
+"mb.wms.wmsloader.repo.layer.label.logourl": "{{ "mb.wms.wmsloader.repo.layer.label.logourl" | trans | raw }}",
+"mb.wms.wmsloader.repo.layer.label.identifier": "{{ "mb.wms.wmsloader.repo.layer.label.identifier" | trans | raw }}",
+"mb.wms.wmsloader.repo.layer.label.authority": "{{ "mb.wms.wmsloader.repo.layer.label.authority" | trans | raw }}",
+"mb.wms.wmsloader.repo.layer.label.url": "{{ "mb.wms.wmsloader.repo.layer.label.url" | trans | raw }}",
+"mb.wms.wmsloader.repo.layer.label.value": "{{ "mb.wms.wmsloader.repo.layer.label.value" | trans | raw }}",
+"mb.wms.wmsloader.repo.layer.label.metadataurl": "{{ "mb.wms.wmsloader.repo.layer.label.metadataurl" | trans | raw }}",
+"mb.wms.wmsloader.repo.layer.label.dimension": "{{ "mb.wms.wmsloader.repo.layer.label.dimension" | trans | raw }}",
+"mb.wms.wmsloader.repo.layer.label.extent": "{{ "mb.wms.wmsloader.repo.layer.label.extent" | trans | raw }}",
+"mb.wms.wmsloader.repo.layer.label.dataurl": "{{ "mb.wms.wmsloader.repo.layer.label.dataurl" | trans | raw }}",
+"mb.wms.wmsloader.repo.layer.label.featurelisturl": "{{ "mb.wms.wmsloader.repo.layer.label.featurelisturl" | trans | raw }}"
 }
