--- a/src/Mapbender/WmsBundle/Resources/views/Repository/macros.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/macros.html.twig
@@ -7,7 +7,7 @@
   <div class="metaText">{{ requestinformation.httpPost }}</div>
   <div class="clearContainer"></div>
 
-  <div class="labelText">{{title}} {{ "Formats" | trans }}:</div>
+  <div class="labelText">{{title}} {{ "mb.wms.wmsloader.repo.macros.label.formats" | trans }}:</div>
   {% for format in requestinformation.formats %}
     <div class="metaText metaFormats">{{ format }}</div>
   {% endfor %}
