--- a/src/Mapbender/WmsBundle/Resources/views/Repository/new.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/new.html.twig
@@ -1,6 +1,6 @@
 {% extends "FOMManagerBundle::manager.html.twig" %}
 
-{% block title %}{{ 'Add Service' | trans }}{% endblock %}
+{% block title %}{{ 'mb.wms.wmsloader.repo.new.label.addservice' | trans }}{% endblock %}
 
 {% block manager_content %}
 
