--- a/src/Mapbender/WmsBundle/Resources/views/Repository/preview.json.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/preview.json.twig
@@ -1,3 +1,4 @@
 {
-"": "{{ "" | trans | raw }}",
+"mb.wms.wmsloader.repo.preview.title.servicerepository": "{{ "mb.wms.wmsloader.repo.preview.title.servicerepository" | trans | raw }}",
+"mb.wms.wmsloader.repo.preview.label.load": "{{ "mb.wms.wmsloader.repo.preview.label.load" | trans | raw }}"
 }
