--- a/src/Mapbender/WmsBundle/Resources/views/Repository/macros.json.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/macros.json.twig
@@ -1,3 +1,3 @@
 {
-"": "{{ "" | trans | raw }}",
+"mb.wms.wmsloader.repo.macros.label.formats": "{{ "mb.wms.wmsloader.repo.macros.label.formats" | trans | raw }}",
 }
