--- a/src/Mapbender/WmsBundle/Resources/views/Repository/new.json.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/new.json.twig
@@ -1,3 +1,3 @@
 {
-"": "{{ "" | trans | raw }}",
+"mb.wms.wmsloader.repo.new.label.addservice": "{{ "mb.wms.wmsloader.repo.new.label.addservice" | trans | raw }}",
 }
