--- a/src/Mapbender/WmsBundle/Resources/views/Repository/preview.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/preview.html.twig
@@ -1,11 +1,11 @@
 {% extends "FOMManagerBundle::manager.html.twig" %}
 
-{% block title %}{{ 'Service Repository' | trans }}{% endblock %}
+{% block title %}{{ 'mb.wms.wmsloader.repo.preview.title.servicerepository' | trans }}{% endblock %}
 
 {% block manager_content %}
     {{ form_errors(form) }}
     <form action="{{path('mapbender_wms_repository_create')}}" method="post">
         {{form_rest(form)}}
-        <input type="submit" name="load" value="{{"Load"|trans}}" />
+        <input type="submit" name="load" value="{{"mb.wms.wmsloader.repo.preview.label.load"|trans}}" />
     </form>
 {% endblock %}
