--- a/src/Mapbender/WmsBundle/Resources/views/Repository/view.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/view.html.twig
@@ -1,7 +1,7 @@
 {% extends "FOMManagerBundle::manager.html.twig" %}
 {% from "MapbenderWmsBundle:Repository:macros.html.twig" import requestinformation  %}
 
-{% block title %}{{ 'WMS' | trans }} {{ wms.title }}{% endblock %}
+{% block title %}{{ 'mb.wms.wmsloader.repo.view.title.wms' | trans }} {{ wms.title }}{% endblock %}
 
 {% block manager_js %}
     <script type="text/javascript" src="{{ asset('bundles/mapbenderwms/repository/repository.js') }}"></script>
@@ -9,29 +9,29 @@
 
 {% block manager_content %}
 
-<a class="button right" title="{{"Back to service list" | trans}}" href="{{ path('mapbender_manager_repository_index') }}">Back</a>
+<a class="button right" title="{{"mb.wms.wmsloader.repo.view.label.backtoservicelist" | trans}}" href="{{ path('mapbender_manager_repository_index') }}">Back</a>
 
 <div id="serviceTabContainer" class="tabContainer">
   <ul class="tabs">
-    <li id="tabMetaData" class="tab active">{{"Metadata" | trans }}</li>
-    <li id="tabContact" class="tab">{{"Contact" | trans }}</li>
-    <li id="tabService" class="tab">{{"Details" | trans }}</li>
-    <li id="tabLayers" class="tab">{{"Layers" | trans }}</li>
+    <li id="tabMetaData" class="tab active">{{"mb.wms.wmsloader.repo.view.label.metadata" | trans }}</li>
+    <li id="tabContact" class="tab">{{"mb.wms.wmsloader.repo.view.label.contact" | trans }}</li>
+    <li id="tabService" class="tab">{{"mb.wms.wmsloader.repo.view.label.details" | trans }}</li>
+    <li id="tabLayers" class="tab">{{"mb.wms.wmsloader.repo.view.label.layers" | trans }}</li>
   </ul>
   <div id="containerMetaData" class="container active serviceContainer serviceMetaContainer">
-    <div class="labelText">{{ "Title" | trans }}:</div><div class="metaText">{{ wms.title }}</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.title" | trans }}:</div><div class="metaText">{{ wms.title }}</div>
     <div class="clearContainer"></div>
-    <div class="labelText">{{ "Name" | trans }}:</div><div class="metaText">{{ wms.name }}</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.name" | trans }}:</div><div class="metaText">{{ wms.name }}</div>
     <div class="clearContainer"></div>
-    <div class="labelText">{{ "Version" | trans }}:</div><div class="metaText">{{ wms.version }}</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.version" | trans }}:</div><div class="metaText">{{ wms.version }}</div>
     <div class="clearContainer"></div>
-    <div class="labelText">{{ "Origin URL" | trans }}:</div><div class="metaText metaUrl">{{ wms.originUrl }}</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.originurl" | trans }}:</div><div class="metaText metaUrl">{{ wms.originUrl }}</div>
     <div class="clearContainer"></div>
-    <div class="labelText">{{ "Abstract" | trans }}:</div><div class="metaText">{{ wms.description }}</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.abstract" | trans }}:</div><div class="metaText">{{ wms.description }}</div>
     <div class="clearContainer"></div>
-    <div class="labelText">{{ "Online Resource" | trans }}:</div><div class="metaText">{{ wms.onlineResource }}</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.onlineresource" | trans }}:</div><div class="metaText">{{ wms.onlineResource }}</div>
     <div class="clearContainer"></div>
-    <div class="labelText">{{ "Exception Formats" | trans }}:</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.exceptionformats" | trans }}:</div>
     <div class="metaText">
       {% for exc in wms.exceptionFormats %}
         {% if not loop.first %},{% endif %}
@@ -39,62 +39,62 @@
       {% endfor %}
     </div>
     <div class="clearContainer"></div>
-    <div class="labelText">{{ "Fees" | trans }}:</div><div class="metaText">{{ wms.fees }}</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.fees" | trans }}:</div><div class="metaText">{{ wms.fees }}</div>
     <div class="clearContainer"></div>
-    <div class="labelText">{{ "Access constraints" | trans }}:</div><div class="metaText">{{ wms.accessConstraints }}</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.accessconstraints" | trans }}:</div><div class="metaText">{{ wms.accessConstraints }}</div>
     <div class="clearContainer"></div>
   </div>
   <div id="containerContact" class="container serviceContainer serviceContactContainer">
-    <div class="labelText">{{ "Person" | trans }}:</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.person" | trans }}:</div>
     <div class="metaText">{{ wms.contact.person }}</div>
     <div class="clearContainer"></div>
 
-    <div class="labelText">{{ "Organization" | trans }}:</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.organization" | trans }}:</div>
     <div class="metaText">{{ wms.contact.organization }}</div>
     <div class="clearContainer"></div>
 
-    <div class="labelText">{{ "Position" | trans }}:</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.position" | trans }}:</div>
     <div class="metaText">{{ wms.contact.position }}</div>
     <div class="clearContainer"></div>
 
-    <div class="labelText">{{ "Telephone" | trans }}:</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.telephone" | trans }}:</div>
     <div class="metaText">{{ wms.contact.voiceTelephone }}</div>
     <div class="clearContainer"></div>
 
-    <div class="labelText">{{ "Facsimile" | trans }}:</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.facsimile" | trans }}:</div>
     <div class="metaText">{{ wms.contact.facsimileTelephone }}</div>
     <div class="clearContainer"></div>
 
-    <div class="labelText">{{ "Email" | trans }}:</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.email" | trans }}:</div>
     <div class="metaText">{{ wms.contact.electronicMailAddress }}</div>
     <div class="clearContainer"></div>
 
-    <div class="labelText">{{ "Address" | trans }}:</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.address" | trans }}:</div>
     <div class="metaText">{{ wms.contact.address }}</div>
     <div class="clearContainer"></div>
 
-    <div class="labelText">{{ "Addresstype" | trans }}:</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.addresstype" | trans }}:</div>
     <div class="metaText">{{ wms.contact.addressType }}</div>
     <div class="clearContainer"></div>
 
-    <div class="labelText">{{ "City" | trans }}:</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.city" | trans }}:</div>
     <div class="metaText">{{ wms.contact.addressCity }}</div>
     <div class="clearContainer"></div>
 
-    <div class="labelText">{{ "State" | trans }}:</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.state" | trans }}:</div>
     <div class="metaText">{{ wms.contact.addressStateOrProvince }}</div>
     <div class="clearContainer"></div>
 
-    <div class="labelText">{{ "Postcode" | trans }}:</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.postcode" | trans }}:</div>
     <div class="metaText">{{ wms.contact.addressPostcode }}</div>
     <div class="clearContainer"></div>
 
-    <div class="labelText">{{ "Country" | trans }}:</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.country" | trans }}:</div>
     <div class="metaText">{{ wms.contact.addressCountry }}</div>
     <div class="clearContainer"></div>
   </div>
   <div id="containerService" class="container serviceContainer serviceServiceContainer">
-    <div class="labelText">{{ "Version" | trans }}:</div>
+    <div class="labelText">{{ "mb.wms.wmsloader.repo.view.label.version" | trans }}:</div>
     <div class="metaText">{{ wms.version }}</div>
     <div class="clearContainer"></div>
 
@@ -128,7 +128,7 @@
   </div>
   <div id="containerLayers" class="container serviceContainer serviceLayersContainer">
     {% if wms.version == '1.1.1' %}
-        <div class="messageBox hint">{{ 'Caution: Scale calculations are subject to limited ScaleHint resolution in WMS 1.1.1!'|trans }}</div>
+        <div class="messageBox hint">{{ 'mb.wms.wmsloader.repo.view.message.cautionscalehint'|trans }}</div>
     {% endif %}
       {% include "MapbenderWmsBundle:Repository:layer.html.twig"  with {'layer': wms.rootlayer, 'itemLevel': 1 }%}
   </div>
