--- a/src/Mapbender/WmsBundle/Resources/views/Element/wmsloader.json.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Element/wmsloader.json.twig
@@ -4,7 +4,7 @@
 "mb.wms.wmsloader.error.operation": "{{ "mb.wms.wmsloader.error.operation" | trans | raw }}",
 "mb.wms.wmsloader.error.version": "{{ "mb.wms.wmsloader.error.version" | trans | raw }}",
 "mb.wms.wmsloader.error.load": "{{ "mb.wms.wmsloader.error.load" | trans | raw }}",
-"mb.wms.wmsloader.title": "{{ "mb.wms.wmsloader.title" | trans | raw }}",
+"mb.wms.wmsloader.dialog.label.title": "{{ "mb.wms.wmsloader.dialog.label.title" | trans | raw }}",
 "mb.wms.wmsloader.dialog.btn.cancel": "{{ "mb.wms.wmsloader.dialog.btn.cancel" | trans | raw }}",
 "mb.wms.wmsloader.dialog.btn.load": "{{ "mb.wms.wmsloader.dialog.btn.load" | trans | raw }}"
 }
